--- a/tekton/templates/rolebinding-pipeline-edit.yaml
+++ b/tekton/templates/rolebinding-pipeline-edit.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: pipeline-edit
+  name: {{ .Values.tektonNamespace }}-pipeline-edit
   namespace: {{ .Values.app.namespace }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
