Update argocd for gitops 1.8

--- a/argocd/templates/argocd.yaml
+++ b/argocd/templates/argocd.yaml
@@ -4,8 +4,10 @@ metadata:
   name: argocd
   namespace: {{ .Values.argocdNamespace }}
 spec:
-  dex:
-    openShiftOAuth: true
+  sso:
+    dex:
+      openShiftOAuth: true
+    provider: dex
   rbac:
     policy: |
       g, system:cluster-admins, role:admin
